# Dissertation_UCL

./: .gitignore  DTA_2.ipynb  DTA_dr.py  LICENSE  Prompts_full.ipynb  README.md  ReadmeLaura.md  diss_project.ipynb  diss_project_progeess_week4.ipynb  pyproject.toml
data/: Data_into_SQLite.py
docs/: Documentation_data_exploration.md
sampleproject/: example.py
tests/: test_example.py
